fix long word not wrapping

--- a/assets/css/scss/_reset-normalize.scss
+++ b/assets/css/scss/_reset-normalize.scss
@@ -31,6 +31,7 @@ audio[controls], canvas, video {
 *:before,
 *:after {
     @include box-sizing();
+    word-wrap: break-word;
 }
 
 /*
