--- a/assets/css/scss/_sidebar--widgets.scss
+++ b/assets/css/scss/_sidebar--widgets.scss
@@ -1,6 +1,4 @@
 .widget {
-    overflow: hidden;
-
     &:last-child {
         margin-bottom: 0;
     }
